[tool.poetry]
name = "elibrary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
elibrary = "elibrary.main:run"
import-catalog = "import-catalog.main:run"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
fastapi = "^0.104.0"
sqlmodel = "^0.0.8"
baize = "^0.20.5"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
