[tool.poetry]
name = "elibrary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
import-catalog = "elibrary.internal.import_catalog:run"
extract-covers = "extract-covers.main:run"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
fastapi = "^0.104.0"
sqlmodel = "^0.0.8"
baize = "^0.20.5"
jinja2 = "^3.1.2"
authlib = "^1.2.1"
httpx = "^0.25.0"
pdf2image = "^1.16.3"
pandas-stubs = "^2.1.1.230928"


[tool.poetry.group.prod.dependencies]
uvicorn = { extras = ["standard"], version = "^0.23.2" }
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
